# t2lp

./: README.md
t2lp/: .kdev_include_paths  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  t2lp  t2lp.kdev4
t2lp/.kdev4/: t2lp.kdev4
t2lp/include/: Cabalar.h  CabalarUtils.h  Formula.h  Formulas.h  HengZhang.h  Makefile  NNFUtils.h  PNFUtils.h  Rule.h  SMTranslator.h  Utils.h  Vocabulary.h  cmake_install.cmake  parse.h  structs.h
t2lp/parse/: clean.sh  generate.sh  generate.sh~  sm_lex.l  sm_parse.y
t2lp/src/: CMakeLists.txt  Cabalar.cpp  CabalarUtils.cpp  Formula.cpp  Formulas.cpp  HengZhang.cpp  Makefile  NNFUtils.cpp  PNFUtils.cpp  Rule.cpp  SMTranslator.cpp  Utils.cpp  Vocabulary.cpp  cmake_install.cmake  global.cpp  lex.cpp  parse.cpp
t2lp/test/: cnf.fact  cnf.fact2  cnf.fact3  cnf.in  cnf.out  cnfdnf.fact  cnfdnf.in  color.fact  color.fact2  color.fact3  color.fact4  color.in  color.out  record.txt  setc.fact  setc.fact1  setc.fact2  setc.fact3  setc.fact4  setc.in  setc.out
testSH/color/: a.out  catch_time.py  color_claspD.lp  color_dlv.lp  colorfactDLV10_1.lp  colorfactDLV10_2.lp  colorfactDLV10_3.lp  colorfactDLV10_4.lp  colorfactDLV10_5.lp  colorfactDLV15_1.lp  colorfactDLV15_2.lp  colorfactDLV15_3.lp  colorfactDLV15_4.lp  colorfactDLV15_5.lp  colorfactDLV20_1.lp  colorfactDLV20_2.lp  colorfactDLV20_3.lp  colorfactDLV20_4.lp  colorfactDLV20_5.lp  colorfactDLV25_1.lp  colorfactDLV25_2.lp  colorfactDLV25_3.lp  colorfactDLV25_4.lp  colorfactDLV25_5.lp  colorfactDLV30_1.lp  colorfactDLV30_2.lp  colorfactDLV30_3.lp  (+50 more)
(+77 files in other folders)
